app/assets/stylesheets/reports.scss
/* ... */
.report-mcu-table {
  margin-bottom: 35px;
  width: 540px;
  &:last-of-type {
    margin-bottom: 10px;
    tbody tr:first-child {
      @extend %table-footer-cell;
    }
  }
  td, th {
    @include table-cell-treatment;
  }
  th:nth-child(1) {
    width: 186px;
  }
  th:nth-child(2) {
    width: 86px;
  }
  th:nth-child(3) {
    width: 128px;
  }
}

.report-mcu {
  .report-main-body {
    margin-top: 10px;
  }
}

.report-capital-stock-trial-balance {
  .report-table {
    width: auto;
  }
}

@media print {
  .account-summary-report .report-table:not(.account-summary-collateral-totals) tbody td:first-child,
  .account-summary-report tfoot,
  .account-summary-collateral-totals tbody td {
    color: $print-color;
    background: transparent;
  }
  .account-summary-collateral-notice {
    padding-left: 0;
    border-color: $print-color;
    &:before {
      display: none;
    }
  }
  .account-summary-report {
    h2.header-with-action {
      text-align: left;
      a {
        display: none;
      }
      span {
        display: block;
        float: none;
      }
    }
    .report-table:not(.account-summary-collateral-totals) tbody td:first-child {
      color: $print-color;
      @include typography-print-table-cell;
    }
    h2 {
      @include typography-print-subheader;
    }
    dt, dd  {
      @include typography-print-details;
      color: $print-color;
    }
    tfoot td, .account-summary-collateral-totals tbody td {
      color: $print-color;
      @include typography-print-table-total;
    }
  }
  .report {
    color: $print-color;
    h1 {
      @include typography-print-header;
      float: none;
      margin-bottom: 0px;
    }
  }
  .report-header-buttons, .report-inputs {
    display: none;
  }
  .report-header {
    p {
      @include typography-print-table-cell;
    }
  }
  .report-main-body {
    margin-bottom: 0px;
    h2 {
      @include typography-print-subheader;
    }
    h3 {
      @include typography-print-summary-title;
    }
    p {
      @include typography-print-table-cell;
    }
    small {
      @include typography-print-footnote;
      width: 66%;
      display: block;
      p, span, span:first-child {
        @include typography-print-footnote;
      }
    }
    .report-table-title {
      margin-bottom: 25px;
    }
  }
  .report-summary-data {
    margin-right: 25px;
    p {
      color: $print-color;
      @include typography-print-summary-data;
    }
  }
  .authorizations-report .report-table tbody td {
    @include typography-print-table-cell;
  }
  .report-table  {
    border: none;
    width: 100%;
    margin-bottom: 15px;
    thead + tbody tr:nth-child(even), &.table-dividend-summary tbody tr:nth-child(even), &.securities-services-table tr:nth-child(even),
    thead, .sorting_asc, .sorting_desc, tbody tr:nth-child(odd), tfoot, td, th {
      background-color: transparent;
      border: none;
      min-width: 0 !important;
    }
    thead + tbody tr:nth-child(even), &.table-dividend-summary tbody tr:nth-child(even), &.securities-services-table tr:nth-child(even) { 
      background-color: transparent;
    }
    tbody td {
      @include typography-print-table-cell;
    }
    thead th {
      @include typography-print-table-heading;
      position: static;
    }
    tfoot td {
      @include typography-print-table-total;
      color: $print-color;
    }
    .report-cell-narrow {
      padding: 6px 8px;
    }
    .report-cell-right {
      padding: 6px 8px;
    }
    tr, td, th, thead, tfoot {
      page-break-inside: avoid;
    }
    tr, td, th {
      vertical-align: top;
    }
    tfoot {
      display: table-row-group;
    }

    tbody tr {
      td {
        padding: 6px 0px;
        border-bottom: 1px solid $light-gray;
        box-sizing: border-box;
      }
    }
    thead tr th {
      border-bottom: 1px solid $light-gray;
    }
  }
  .report-sub-table, 
  .sbc-borrowing-capacity-tables .report-sub-table, 
  .standard-credit-borrowing-capacity-tables .report-sub-table {
    width: 50%;
    clear: both;
    td, th {
      width: auto;
      &:first-child {
        width: auto;
      }
      padding: 6px 0;
    }
    tbody tr:first-child td {
      border-top: 1px solid $light-gray;
    }
    tbody tr td:first-child {
      padding-left: 12px;
    }
    tfoot tr td {
      border-bottom: 1px solid $light-gray;
    }
  }
  .row {
    width: auto;
  }
  .advances-details-report-table {
    td, th {
      &:last-child {
        display: table-cell;
      }
      br:first-of-type {
        content: ' ';
        &:after {
          content: "\a\a";
          white-space: pre;
        }
      }
    }
  }
  .standard-credit-borrowing-capacity-tables .report-parent-table {
    th:last-child {
      width: 80px;
    }
  }
  .report-print-footer {
    @include typography-print-footer;
    color: $print-color;
    border-top: 1px solid $print-color;
    span {
      padding-left: 10px;
    }
    .page {
      float: right;
    }
  }
  .report-print-date, .report-print-sta, .report-print-filter-text {
    @include typography-print-details;
  }
  .report-print-bank {
    @include typography-print-subheader;
    margin-top: 10px;
  }
  .report-print-details {
    margin-bottom: 50px;
  }
  .sbc-borrowing-capacity-tables, .securities-services-table-wrapper {
    page-break-inside: avoid; 
  }

  .report-securities-services-statement {
    .report-table-vertical-headers td:nth-child(1) {
      background-color: transparent;
    }
    .report-table td {
      border-left: none;
      border-right: none;
      border-top: 1px solid $light-gray;
      &:last-child {
        width: 140px;
      }
    }
    .report-summary-right {
      width: 355px;
    }
    .report-cell-expanding {
      white-space: normal;
    }
  }
}

